--- a/SDVirusChecker/app/src/main/res/values/strings.xml
+++ b/SDVirusChecker/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">SDVirusChecker</string>
+    <string name="app_name">SD Virus Checker</string>
+    <string name="check_button">Check now!</string>
+    <string name="no_virus">No viruses were found.</string>
+    <string name="next_scan">Next scan in 1 hour.</string>
+    <string name="title_finish_activity">Check finished</string>
 </resources>
